# PDF_generation

./: .dockerignore  .gitignore  Dockerfile  DockerfileRef  Makefile  README.md  pyproject.toml  setup.cfg
pdf_generation/: __main__.py  main.py
pdf_generation/models/: request_model.py  typst_object.py
pdf_generation/typeset/: base_class.py  image.py  lorem.py  metadata.py  page.py  parser.py  table.py  typst_formatter.py  utils.py
pdf_generation/typeset/dependencies/: dependencies.py  image_factory.py
pdf_generation/typeset/models/: base_class.py  heading.py  image.py  list.py  metadata.py  page.py  paragraph.py  table.py  text.py  typst_object.py
tests/: escape_typst_test.py  main_test.py  parser_test.py
