[tool.poetry]
name = "pdf-generation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
typst = "^0.10.0"
gunicorn = "^21.2.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.26.0"
pytest = "^8.0.1"
pikepdf = "^8.13.0"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
